# refactoring

./: CMakeLists.txt  main.cpp
test/: complicated.cpp  duplicated_code.cpp  refactoring_simplified_boolean_exp.cpp  test_common.h  xx.cpp
test/misc/: complicated.cpp  complicated_x.cpp  duplicated_code.cpp  refactoring_simplified_boolean_exp.cpp
